--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
-MONGODB_URI = mongodb+srv://masuqalislamnafi:Yxyacw0kCNkW0SIV@cluster0.pez3z.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI = 
 
-PORT = 5001
+PORT = 
 
-JWT_SECRET = mysecretkey
+JWT_SECRET = 
 
-NODE_ENV=development
+NODE_ENV=
 
-CLOUDINARY_CLOUD_NAME = dnxdoliys
-CLOUDINARY_API_KEY = 786515111924115
-CLOUDINARY_API_SECRET = mW36HmhZVGjHTiXPl7SnZOwJ-_E
+CLOUDINARY_CLOUD_NAME = 
+CLOUDINARY_API_KEY = 
+CLOUDINARY_API_SECRET = 
